<resources>
    <string name="app_name">Donnez</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="birth_date">Birth Date (dd/mm/yyyy) </string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirmation_code">Confirmation Code (######)</string>
    <string name="verify">Verify</string>
    <string name="points">Amount of points</string>
    <string name="logout">Logout</string>
    <string name="pointsTitle">Points</string>
    <string name="hide_table">Hide Table</string>
    <string name="receive_points">Receive Points</string>
    <string name="send_points">Send Points</string>
    <string name="share_points">Share Points</string>
    <string name="connect">Connect</string>
    <string name="show_table">Show Table</string>
    <string name="disconnect">disconnect</string>

</resources>