<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                app:boxBackgroundColor="#F8E9FD"
                android:layout_marginStart="35dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/reg_full_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <DatePicker
                android:id="@+id/reg_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="40dp"
                android:datePickerMode="spinner"
                android:calendarViewShown = "false"
                app:boxBackgroundColor="#F8E9FD" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/reg_email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                app:boxBackgroundColor="#F8E9FD"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/reg_username"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                app:boxBackgroundColor="#F8E9FD"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="40dp"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/reg_password"
                android:inputType="textPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="@string/password"
                app:boxBackgroundColor="#F8E9FD"
                android:layout_marginStart="35dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/showPwd"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/reg_password"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="Show"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/reg_confirm_password"
                android:inputType="textPassword"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:hint="@string/confirm_password"
                app:boxBackgroundColor="#F8E9FD"
                android:layout_marginStart="35dp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/showConfPwd"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/reg_confirm_password"
                android:gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:text="Show"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:id="@+id/btn_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:layout_centerHorizontal="true"
                android:text="@string/sign_up" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>